Corrected Empty Array Error

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -45,55 +45,9 @@
       <section class="hero">
         <h1 class="color">Welcome to BlogIn</h1>
         <h1>Where Life, Education, Inspiration, and Technology Converge!</h1>
-        <button class="explore-btn">Explore</button>
+        <button class="explore-btn scroll">Explore</button>
       </section>
-      <section class="latest">
-        <div class="latest-card">
-          <span class="category">Life</span>
-          <h2>
-            Embracing Stillness: A Guide to Cultivating Inner Peace in a Busy
-            World
-          </h2>
-          <span class="date">DEC 16th 2023</span>
-          <div class="author-con">
-            <img src="/public/images/inspiration.jpg" alt="" />
-            <div>
-              <p>King Tony</p>
-              <small>Author</small>
-            </div>
-          </div>
-        </div>
-        <div class="latest-card">
-          <span class="category">Life</span>
-          <h2>
-            Embracing Stillness: A Guide to Cultivating Inner Peace in a Busy
-            World
-          </h2>
-          <span class="date">DEC 16th 2023</span>
-          <div class="author-con">
-            <img src="/public/images/inspiration.jpg" alt="" />
-            <div>
-              <p>King Tony</p>
-              <small>Author</small>
-            </div>
-          </div>
-        </div>
-        <div class="latest-card">
-          <span class="category">Life</span>
-          <h2>
-            Embracing Stillness: A Guide to Cultivating Inner Peace in a Busy
-            World
-          </h2>
-          <span class="date">DEC 16th 2023</span>
-          <div class="author-con">
-            <img src="/public/images/inspiration.jpg" alt="" />
-            <div>
-              <p>King Tony</p>
-              <small>Author</small>
-            </div>
-          </div>
-        </div>
-      </section>
+      <section class="latest"></section>
       <section class="about">
         <h2 class="title">🌟 About BlogIn</h2>
         <div class="about-wrapper">
@@ -203,7 +157,7 @@
                 interests and engage in thought-provoking discussions.
               </p>
             </div>
-            <button class="explore-btn">Start Exploring</button>
+            <button class="explore-btn scroll">Start Exploring</button>
           </div>
         </div>
       </section>
@@ -221,7 +175,7 @@
               >Ready to dive in? Click below to explore our latest
               articles!</strong
             >
-            <button class="explore-btn">Explore Articles</button>
+            <button class="explore-btn scroll">Explore Articles</button>
           </div>
           <img src="/public/images/start.png" alt="" />
         </div>
