Added Google Analytics

--- a/admin/html/page.html
+++ b/admin/html/page.html
@@ -19,6 +19,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-EVEPGP9J0H"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-EVEPGP9J0H");
+    </script>
     <!--<link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/all.css" />-->
     <title>BlogIn</title>
   </head>
@@ -64,6 +78,10 @@
       <section class="page"></section>
     </main>
     <section class="alert"></section>
-    <script type="module" src="/admin/js/app.js"></script>
+    <section class="loader">
+      <i class="fas fa-spinner"></i>
+      <p>Please wait...</p>
+    </section>
+    <!--<script type="module" src="/admin/js/app.js"></script>-->
   </body>
 </html>
