--- a/public/html/preview.html
+++ b/public/html/preview.html
@@ -23,6 +23,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-EVEPGP9J0H"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-EVEPGP9J0H");
+    </script>
     <!--<link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/all.css" />-->
     <title>BlogIn</title>
   </head>
