--- a/admin/html/page.html
+++ b/admin/html/page.html
@@ -82,6 +82,6 @@
       <i class="fas fa-spinner"></i>
       <p>Please wait...</p>
     </section>
-    <!--<script type="module" src="/admin/js/app.js"></script>-->
+    <script type="module" src="/admin/js/app.js"></script>
   </body>
 </html>
