--- a/public/html/category.html
+++ b/public/html/category.html
@@ -15,6 +15,7 @@
     <meta name="creator" content="King Tony Softwares" />
     <meta name="publisher" content="King Tony Softwares" />
     <link rel="stylesheet" href="/public/css/category.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
