Worked on category not displaying content

--- a/public/html/preview.html
+++ b/public/html/preview.html
@@ -50,7 +50,7 @@
         </a>
         <nav>
           <ul>
-            <li class="tab active">Home</li>
+            <li class="tab">Home</li>
           </ul>
         </nav>
       </header>
