--- a/admin/html/page.html
+++ b/admin/html/page.html
@@ -12,6 +12,11 @@
     <meta name="creator" content="King Tony Softwares" />
     <meta name="publisher" content="King Tony Softwares" />
     <link rel="stylesheet" href="/admin/css/page.css" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
